V1. non-responsive yet.

--- a/index.html
+++ b/index.html
@@ -184,19 +184,37 @@
         </div>
         </div>
         <div class="container">
-            <div class="productcontainer">
+            <table id="fullprodtable">
+                <tr><td class="productcontainer"><div class="productlogo">UL</div></td><td class="productcontainer"><div class="productlogo">SC</div></td><td class="productcontainer"><div class="productlogo">SA</div></td></tr>
+                <tr><td><div class="producttitle">Uplink</div></td><td><div class="producttitle">ScoreCard</div></td><td><div class="producttitle">SweepAnalytics</div></td></tr>
+                <tr><td><div class="productdesc">
+                    Uplink&#8482; streamlines the deployment and implementation process throughout all stages of the project's workflow from Survey, BOM Creation, Scoping, Check-in/out, Construction, Quality Assurance, and Closeout. Built for mobile teams and remote-management resources, Uplink&#8482; helps to move your team away from Excel and into specialized and user friendly applications that fit your exact needs.
+                </div></td>
+                 <td><div class="productdesc">
+                        ScoreCard&#8482; allows project-management teams to quickly compile project data and KPI frameworks into a single, customizable tool. With ScoreCard&#8482;, managers can drill into the performance of projects and contractors to instantly understand trends from real-time performance data. GC's and markets can know their relative ranking and begin to understand how they fit in the pack.
+                    </div></td>
+                    <td><div class="productdesc">
+                        SweepAnalytics&#8482; automates the labelling, marker positioning, and processing of Sweep results. It then validates the test results to ensure they are complete and meet your performance requirements. Sweep processing and validation time is cut down to minutes instead of hours.
+                    </div></td></tr>
+                <tr><td><div class="moreinfo">More Info</div></td><td><div class="moreinfo">More Info</div></td><td><div class="moreinfo">More Info</div></td></tr>
+
+            </table>
+            <div id="mobileproducts">
+            <div class="productcontainer" style="margin-bottom: 40px;">
                 <div class="productlogo">UL</div>
                 <div class="producttitle">Uplink</div>
                 <div class="productdesc">
                     Uplink&#8482; streamlines the deployment and implementation process throughout all stages of the project's workflow from Survey, BOM Creation, Scoping, Check-in/out, Construction, Quality Assurance, and Closeout. Built for mobile teams and remote-management resources, Uplink&#8482; helps to move your team away from Excel and into specialized and user friendly applications that fit your exact needs.
                 </div>
+                <div class="moreinfo">More Info</div>
             </div>
-            <div class="productcontainer">
+            <div class="productcontainer" style="margin-bottom: 40px;">
                 <div class="productlogo">SC</div>
                 <div class="producttitle">ScoreCard</div>
                 <div class="productdesc">
                     ScoreCard&#8482; allows project-management teams to quickly compile project data and KPI frameworks into a single, customizable tool. With ScoreCard&#8482;, managers can drill into the performance of projects and contractors to instantly understand trends from real-time performance data. GC's and markets can know their relative ranking and begin to understand how they fit in the pack.
                 </div>
+                <div class="moreinfo">More Info</div>
             </div>
             <div class="productcontainer">
                 <div class="productlogo">SA</div>
@@ -204,6 +222,8 @@
                 <div class="productdesc">
                     SweepAnalytics&#8482; automates the labelling, marker positioning, and processing of Sweep results. It then validates the test results to ensure they are complete and meet your performance requirements. Sweep processing and validation time is cut down to minutes instead of hours.
                 </div>
+                <div class="moreinfo">More Info</div>
+            </div>
             </div>
         </div>
     </section>
