--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
                     {
                         breakpoint: 768,
                         settings: {
-                            arrows: false,
+                            arrows: true,
                             centerMode: true,
                             centerPadding: '40px',
                             slidesToShow: 1
@@ -32,7 +32,7 @@
                     {
                         breakpoint: 480,
                         settings: {
-                            arrows: false,
+                            arrows: true,
                             centerMode: true,
                             centerPadding: '40px',
                             slidesToShow: 1
