content changes for Kris

--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
         </div>
         <div class="container">
             <table id="fullprodtable">
-                <tr><td class="productcontainer"><div class="productlogo">UL</div></td><td class="productcontainer"><div class="productlogo">SC</div></td><td class="productcontainer"><div class="productlogo">SA</div></td></tr>
+                <tr><td class="productcontainer"><div class="productlogo">SC</div></td><td class="productcontainer"><div class="productlogo">UL</div></td><td class="productcontainer"><div class="productlogo">SA</div></td></tr>
                 <tr><td><div class="producttitle">ScoreCard</div></td><td><div class="producttitle">Uplink</div></td><td><div class="producttitle">SweepAnalytics</div></td></tr>
                 <tr>
                     <td><div class="productdesc" ng-bind-html="sctext">
@@ -134,7 +134,7 @@
                     <div  data-equalizer-watch><div class="servicename">
                         <i class="fa fa-check"></i>
                     </div>
-                        <div class="heading">Closeout and Testing</div><div class="servicedesc servicedescmob" ><span class="">From us testing on site or remotely to photography, technical review, automation, and QA, our closeout services help deliver a COP that meets the customer's spec faster than anyone else.</span></div></div>
+                        <div class="heading">Closeout and Testing</div><div class="servicedesc servicedescmob" ><span class="">From testing to photography, technical review, automation, and QA, our closeout services help deliver a COP that meets the customer's spec faster than anyone else.</span></div></div>
                 </h3></div>
                 <!--<div><h3>-->
                     <!--<div class=""><div class="servicename">-->
@@ -146,19 +146,25 @@
                     <div  data-equalizer-watch><div class="servicename">
                         <i class="fa fa-cogs"></i>
                     </div>
-                        <div class="heading">Hardware</div><div class="servicedesc servicedescmob" ><span class="">Our ComPacks&#8482; connect you with your team in a streamlined and simple manner. Our integrate hardware solutions put us in the field with your crews to support and closeout in realtime.</span></div></div>
+                        <div class="heading">Hardware</div><div class="servicedesc servicedescmob" ><span class="">Our ComPack&#8482; is everything your crews need to close-out in real time, no excuses. By providing one integrated hardware solution, we've made it as simple as it gets to receive live data from the field so that it can be processed and approved on the fly.</span></div></div>
+                </h3></div>
+                <div><h3>
+                    <div data-equalizer-watch><div class="servicename">
+                        <i class="fa fa-users"></i>
+                    </div>
+                        <div class="heading">Management</div><div class="servicedesc servicedescmob" ><span class="">Our construction and project management services have been used by the largest carriers and contractors in the industry, we have a passion for building and innovating that shows in the way we execute wireless construction projects.</span></div></div>
                 </h3></div>
                 <div><h3>
                     <div data-equalizer-watch><div class="servicename">
                         <i class="fa fa-map-marker"></i>
                     </div>
-                        <div class="heading">Reporting and Coordination</div><div class="servicedesc servicedescmob" ><span class="">With our team, your COP services are augmented by live staff that can help them bridge the gap between reporting and getting the work done, so that you can get the information into and out of the field necessary to get the job done right.</span></div></div>
+                        <div class="heading">Reporting and Coordination</div><div class="servicedesc servicedescmob" ><span class="">With Uplink&#8482;, coordination and reporting has never been easier, but for when technology just can't cut it, we have the best live staff support and report for you all the way through.</span></div></div>
                 </h3></div>
                 <div><h3>
                     <div data-equalizer-watch><div class="servicename">
                         <i class="fa fa-lightbulb-o"></i>
                     </div>
-                        <div class="heading">Training and Support</div><div class="servicedesc servicedescmob" ><span class="">Training and support to get the job done right, but most importantly the first time. Our training services are designed to be immersive and efficient, helping your team cost effectively get the training they need throughout the project.</span></div></div>
+                        <div class="heading">Training and Support</div><div class="servicedesc servicedescmob" ><span class="">Training and support to get the job done right, but most importantly the first time. Our training services are designed to be immersive and efficient, helping your team cost effectively get the training they need throughout the project. This support comes complementary with all services.</span></div></div>
                 </h3></div>
                 <div><h3>
                     <div data-equalizer-watch><div class="servicename">
@@ -166,56 +172,15 @@
                     </div>
                         <div class="heading">Metrics</div><div class="servicedesc servicedescmob" ><span class="">Measuring performance is key to improving it. Ontel puts the right information where you need it, allowing your team to instantly access KPI's, without needing anything more than a phone.</span></div></div>
                 </h3></div>
+                <div><h3>
+                    <div data-equalizer-watch><div class="servicename">
+                        <i class="fa fa-truck"></i>
+                    </div>
+                        <div class="heading">General Contracting</div><div class="servicedesc servicedescmob" ><span class="">We are a licensed general contractor aiming to provide the highest skilled, safe, and most customer oriented crews possible. We excel in most scopes of work surrounding LTE.</span></div></div>
+                </h3></div>
             </div>
 
-            <div class="container" data-equalizer style="display: none;">
-            <ul class="servicelist sl-l">
-                <li class="preanimate" >
-                    <div class="servicename">
-                        <i class="fa fa-check"></i>
-                        <div class="service"><h3>Closeout and Testing</h3></div>
-                    </div>
-                    <div class="servicedesccontainer"><div class="servicedesc" data-equalizer-watch ><span class="preanimate">From us testing on site or remotely to photography, technical review, automation, and QA, our closeout services help deliver a COP that meets the customer's spec faster than anyone else.</span></div></div>
-                </li>
-                <li class="preanimate">
-                    <div class="servicenamecontainer"><div class="servicename">
-                        <i class="fa fa-code"></i>
-                        <div class="service"><h3>Software</h3></div>
-                    </div>
-                        <div class="servicedesccontainer"><div class="servicedesc" data-equalizer-watch ><span class="preanimate">We design and adapt software specifically for wireless construction companies. We have developed tailored software such as SweepAnalytics&#8482; for Automated Testing Validation, ScoreCard&#8482; for Performance Analysis, and Uplink&#8482;, our Wireless Construction mobile application.</span></div></div>
-                </li>
-                <li class="preanimate">
-                    <div class="servicenamecontainer"><div class="servicename">
-                        <i class="fa fa-cogs"></i>
-                        <div class="service"><h3>Hardware</h3></div>
-                    </div>
-                        <div class="servicedesccontainer"><div class="servicedesc" data-equalizer-watch ><span class="preanimate">Our ComPacks&#8482; connect you with your team in a streamlined and simple manner. Our integrate hardware solutions put us in the field with your crews to support and closeout in realtime.</span></div></div>
-                </li>
-            </ul>
-            <ul class="servicelist sl-r">
-                <li class="preanimate">
-                    <div class="servicenamecontainer"><div class="servicename">
-                        <i class="fa fa-map-marker"></i>
-                        <div class="service"><h3>Reporting and Coordination</h3></div>
-                    </div>
-                        <div class="servicedesccontainer"><div class="servicedesc" data-equalizer-watch ><span class="preanimate">With our team, your COP services are augmented by live staff that can help them bridge the gap between reporting and getting the work done, so that you can get the information into and out of the field necessary to get the job done right.</span></div></div>
-                </li>
-                <li class="preanimate">
-                    <div class="servicenamecontainer"><div class="servicename">
-                        <i class="fa fa-lightbulb-o"></i>
-                        <div class="service"><h3>Training and Support</h3></div>
-                    </div>
-                        <div class="servicedesccontainer"><div class="servicedesc" data-equalizer-watch ><span class="preanimate">Training and support to get the job done right, but most importantly the first time. Our training services are designed to be immersive and efficient, helping your team cost effectively get the training they need throughout the project.</span></div></div>
-                </li>
-                <li class="preanimate">
-                    <div class="servicenamecontainer"><div class="servicename">
-                        <i class="fa fa-bar-chart"></i>
-                        <div class="service"><h3>Metrics</h3></div>
-                    </div>
-                        <div class="servicedesccontainer"><div class="servicedesc" data-equalizer-watch ><span class="preanimate">Measuring performance is key to improving it. Ontel puts the right information where you need it, allowing your team to instantly access KPI's, without needing anything more than a phone.</span></div></div>
-                </li>
-            </ul><br style="clear: both">
-        </div>
+
     </section>
     <section id="about" name="about">
         <div class="container titlecontainer">
@@ -223,7 +188,7 @@
         </div>
         </div>
         <div id="companydescription" class="container">
-            Founded in 2013, Ontel is a Washington, D.C. based consultancy that provides specialized technology, management, and administration for General and Technical Contractors in the telecommunications industry.
+            Founded in 2013, Ontel is a Washington, DC based consultancy that provides specialized technology, management, and administration for General and Technical Contractors in the telecommunications industry.
         </div>
         <div id="pastclients" class="container">
             <span>Prior to founding Ontel, we built and managed wireless projects for many of America's largest carriers, equipment manufacturers, and implementation services companies:</span>
@@ -310,7 +275,7 @@
             <div id="email"><a href="mailto:hello@ontel.co">hello@ontel.co</a></div>
         </div>
         <div id="mapcontainer">
-            <div class="mapaddress">321 18th St. SE Unit 7, Washington, D.C 20003</div>
+            <div class="mapaddress">321 18th St. SE Unit 7, Washington, DC 20003</div>
             <map id="map-canvas"></map>
         </div>
     </section>
