updated meta information for description and keywords

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
             });
         });
     </script>
-
+    <meta name="description" content="Ontel is a pioneer in technology solutions and services for the wireless and IoT industries." />
+    <meta name="keywords" content="Ontel,wireless,communication,carrier,technology,iot,tower,closeout,construction,project,management,washington" />
 </head>
 <body ng-controller="TopController">
 <header class="navhead navfixed" ng-class="{'navactive':mobilenav}">
