--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
             });
         });
     </script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-61953702-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
     <meta name="description" content="Ontel is a pioneer in technology solutions and services for the wireless and IoT industries." />
     <meta name="keywords" content="Ontel,wireless,communication,carrier,technology,iot,tower,closeout,construction,project,management,washington" />
 </head>
