removed "side menu"

--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
     </script>
 </head>
 <body>
-<nav id="sidemenu"></nav>
+<!--<nav id="sidemenu"></nav>-->
 <div id="bodywrapper" ng-class="{'active':mobilenav}">
     <section id="landing" name="home">
         <ul class="main-slider bxslider" style="width: auto; position: relative;">
