--- a/internal/index.html
+++ b/internal/index.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;URL=http://internal.ontel.co/">
+    <meta http-equiv="refresh" content="0;URL=https://ontel-intranet.firebaseapp.com/#/">
     <title></title>
 </head>
 <body>
