added phone number

--- a/home.html
+++ b/home.html
@@ -283,6 +283,7 @@
         </div>
         <div id="contactinfo">
             <div id="email"><a href="mailto:hello@ontel.co">hello@ontel.co</a></div>
+            <div id="tel"><a href="tel:12029301434">(202) 930-1434</a></div>
         </div>
         <div id="mapcontainer">
             <div class="mapaddress">321 18th St. SE Unit 7, Washington, DC 20003</div>
