--- a/index.html
+++ b/index.html
@@ -85,15 +85,15 @@
             <option value="-1" ng-click="go('/')" selected>Navigation</option>
             <option value="1" ng-click="go('/')" class="homeli">Home</option>
             <option value="2" ng-click="go('/')" class="softwareli">Software</option>
-            <option value="3" ng-click="go('/')" class="servicesli">Services</option>
-            <option value="4" ng-click="go('/')" class="aboutli">Who We Are</option>
+            <!--<option value="3" ng-click="go('/')" class="servicesli">Services</option>-->
+            <!--<option value="4" ng-click="go('/')" class="aboutli">Who We Are</option>-->
             <option value="5" ng-click="go('/')" class="contactli">Let's Talk</option>
         </select>
         <ul id="menu" class="topnav">
             <li class="homeli"><a href="" ng-click="go('/')">Home</a></li>
             <li class="softwareli"><a href="" ng-click="go('/')">Software</a></li>
-            <li class="servicesli"><a href="" ng-click="go('/')">Services</a></li>
-            <li class="aboutli"><a href="" ng-click="go('/')">Who We Are</a></li>
+            <!--<li class="servicesli"><a href="" ng-click="go('/')">Services</a></li>-->
+            <!--<li class="aboutli"><a href="" ng-click="go('/')">Who We Are</a></li>-->
             <li class="contactli"><a href="" ng-click="go('/')">Let's Talk</a></li>
         </ul>
     </div>
