--- a/footer.html
+++ b/footer.html
@@ -1,19 +1,17 @@
 <footer>
   <div class="contain">
     <div>
-      <!--<div>Home</div>-->
       <div ui-sref="about">About Us</div>
       <div ui-sref="pricing">Pricing</div>
-      <div class="dropdown" ui-sref="solutions">Solutions</div>
       <div ui-sref="support">Support</div>
       <div ui-sref="jobs">Jobs</div>
     </div>
     <div>
       <div class="sub" ui-sref="swift">Swift Projects</div>
-      <div class="sub">Testing</div>
-      <div class="sub">Closeout</div>
-      <div class="sub">Management</div>
-      <div class="sub">Gear</div>
+      <div class="sub" ui-sref="testing">Testing</div>
+      <div class="sub" ui-sref="closeout">Closeout</div>
+      <div class="sub" ui-sref="management">Management</div>
+      <div class="sub" ui-sref="gear">Gear</div>
     </div>
   </div>
   <div class="contain">
