--- a/footer.html
+++ b/footer.html
@@ -15,7 +15,6 @@
     </div>
   </div>
   <div class="contain">
-    <div>&copy; 2016 Ontel, LLC.</div>
-	<div> 327 18th Place NE, Washington, D.C. 20002</div>
+    <div>&copy; 2016 Ontel, LLC</div>
   </div>
 </footer>
