Closeout vs close out update across all pages

--- a/footer.html
+++ b/footer.html
@@ -9,7 +9,7 @@
     <div>
       <div class="sub" ui-sref="swift">Swift Projects</div>
       <div class="sub" ui-sref="testing">Testing</div>
-      <div class="sub" ui-sref="closeout">Closeout</div>
+      <div class="sub" ui-sref="close out">close out</div>
       <div class="sub" ui-sref="management">Management</div>
       <div class="sub" ui-sref="gear">Gear</div>
     </div>
